--- a/Dia 4/index.html
+++ b/Dia 4/index.html
@@ -15,9 +15,7 @@
         }
 
         body {
-            background-image: linear-gradient(65deg, #394764, #5a6987, #c4cad8);
-            background-repeat: no-repeat;
-            background-size: cover;
+            background-image: url('https://st4.depositphotos.com/26272052/28794/v/450/depositphotos_287940836-stock-illustration-blue-calculator-with-dollar-symbol.jpg');
             padding: 0;
             margin: 0;
             height: 80vh;
@@ -25,11 +23,11 @@
         }
 
         .calculadora {
-            width: 13%;
+            width: 15%;
             border: 2px solid black;
             background: #394764;
             padding: 20px;
-            margin: 15% auto;
+            margin: 10% auto;
         }
 
         .input {
@@ -63,6 +61,7 @@
         }
 
         .botoes span:hover {
+            cursor: pointer;
             background-color: rgb(220, 220, 220);
         }
 
